# Aircontrol

./: .env.example  .gitignore  .replit  Pipfile  README.md  alembic.ini  app.py  bash.exe.stackdump  package-lock.json  package.json  pyproject.toml  requeriments.txt
.fetch-client/: fetchClient.json  fetchClientCollection.json  fetchClientCookies.json  fetchClientHistory.json  fetchClientVariable.json
alembic/: env.py
alembic/versions/: 35b554411640_add_creado_por_id_to_mantenimientos_.py  995e8ede0130_add_otroequipo_table_and_link_.py  c406702670ee_initial_migration.py  cb0a7519e904_primer_commit.py
backend/: app.py  data_manager.py  database.py  init_db.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DbStatusIndicator.tsx  ProtectedRoute.tsx
frontend/src/components/Aires/: AiresAddEditModal.tsx  AiresTable.tsx  AiresViewModal.tsx
frontend/src/components/Mantenimientos/: MantenimientoAddModal.tsx  MantenimientoFilter.tsx  MantenimientoImagenModal.tsx  (+2 more)
frontend/src/context/: AppContext.tsx
frontend/src/layouts/: AppLayout.tsx  AuthLayout.tsx
frontend/src/pages/: Aires.tsx  Dashboard.tsx  Estadisticas.tsx  Lecturas.tsx  Mantenimientos.tsx  NotFound.tsx  OtrosEquipos.tsx  Umbrales.tsx  Usuarios.tsx
frontend/src/services/: api.ts
frontend/src/styles/: app.css
frontend/src/types/: Mantenimiento.ts
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  index.html  lecturas.html  login.html  register.html
(+14 files in other folders)
