[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "flask-wtf>=1.2.2",
    "flask-cors>=5.0.1",
    "flask-jwt-extended>=4.7.1",
    "werkzeug>=3.1.3",
]
